--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
                   <img src="assets/images/mobile-collage/Asset-12.png" alt="">
                   <img src="assets/images/mobile-collage/Asset-13.png" alt="">
                   <img src="assets/images/mobile-collage/Asset-14.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-1.png" alt="">
+                  <img src="assets/images/mobile-collage//Asset-2.png" alt="">
+                  <img src=" assets/images/mobile-collage/Asset-3.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-4.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-5.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-6.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-7.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-8.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-9.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-10.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-11.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-12.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-13.png" alt="">
+                  <img src="assets/images/mobile-collage/Asset-14.png" alt="">
                 </div>
               </div>
             </div>
