--- a/partners.html
+++ b/partners.html
@@ -166,7 +166,8 @@
 							</p>
 							<div class="links" style="margin-top: 20px;">
 								<a href="becomepartner.html" class="mybtn-custom hvr-sweep-to-right"
-									style="width: 400px; background-color: rgb(165, 165, 165);"><span>Become a
+									style="width: 250px; background-color: rgb(165, 165, 165); margin: 0px 10px;"><span>Become
+										a
 										partner</span> </a>
 							</div>
 						</div>
