--- a/partners.html
+++ b/partners.html
@@ -201,7 +201,7 @@
 
 						<!-- Button filter for Pharmarcies -->
 						<div class="btn-group filter-section">
-							<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+							<button type="button" class="btn filter-btn dropdown-toggle" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">
 								Filter Pharmacies
 							</button>
