--- a/partners.html
+++ b/partners.html
@@ -292,7 +292,7 @@
 
 						<!-- Button filter for Medical Labs -->
 						<div class="btn-group filter-section">
-							<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+							<button type="button" class="btn filter-btn dropdown-toggle" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">
 								Filter by location
 							</button>
@@ -382,7 +382,7 @@
 					<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
 						<!-- Button filter for Medical Labs -->
 						<div class="btn-group filter-section">
-							<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+							<button type="button" class="btn filter-btn dropdown-toggle" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">
 								Filter by Hospitals
 							</button>
