--- a/becomepartner.html
+++ b/becomepartner.html
@@ -286,9 +286,7 @@
               </a>
             </div>
             <div class="text">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, maxime. Esse eaque possimus dolorum
-                dignissimos!
-              </p>
+              <p>Your convenient access to Healthcare</p>
             </div>
           </div>
           <div class="fotter-social-links">
