--- a/index.html
+++ b/index.html
@@ -1312,8 +1312,7 @@
       <div class="section-title extra">
         <h2 class="title">Frequently Asked Questions</h2>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur doloribus, quasi ratione tempore eius
-          necessitatibus numquam recusandae commodi.
+          With our robust solution, take a glimpse at the feedbacks from our happy users.
         </p>
       </div>
       <div class="row">
@@ -1548,9 +1547,7 @@
               </a>
             </div>
             <div class="text">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, maxime. Esse eaque possimus dolorum
-                dignissimos!
-              </p>
+              <p>Your convenient access to Healthcare</p>
             </div>
           </div>
           <div class="fotter-social-links">
