--- a/partners.html
+++ b/partners.html
@@ -476,127 +476,6 @@
 
 
 	</section>
-	<!-- Partner Area End -->
-
-	<!-- <div class="container">
-		<div class="row">
-			<div class="col-md-8">
-				<div class="col-sm col-lg-4 col-md-6">
-					<div class="partner-logo-area">
-						<div class="img">
-							<img src="assets/images/blog/img1.png" alt="">
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-
-			</div>
-		</div>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm col-lg-4 col-md-6">
-				<div class="partner-logo-area">
-					<div class="img">
-						<img src="assets/images/blog/img1.png" alt="">
-					</div>
-				</div>
-			</div>
-			<div class="col-sm col-lg-4 col-md-6">
-				<div class="partner-logo-area">
-					<div class="img">
-						<img src="assets/images/blog/img1.png" alt="">
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12 d-flex justify-content-center">
-				<nav aria-label="Page navigation example">
-					<ul class="pagination">
-						<li class="page-item">
-							<a class="page-link" href="#" aria-label="Previous">
-								<span aria-hidden="true"><i class="fas fa-angle-double-left"></i></span>
-							</a>
-						</li>
-						<li class="page-item"><a class="page-link" href="#">1</a></li>
-						<li class="page-item"><a class="page-link active" href="#">2</a></li>
-						<li class="page-item"><a class="page-link" href="#">3</a></li>
-						<li class="page-item">
-							<a class="page-link" href="#" aria-label="Next">
-								<span aria-hidden="true"><i class="fas fa-angle-double-right"></i></span>
-							</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</div> -->
-
-
-
-
-
-	<!-- <section class="blog-page single-blog-area">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm col-lg-4 col-md-6">
-					<div class="single-blog">
-						<div class="img">
-							<img src="assets/images/blog/img1.png" alt="">
-						</div>
-					</div>
-				</div>
-				<div class="col-sm col-lg-4 col-md-6">
-					<div class="single-blog">
-						<div class="img">
-							<img src="assets/images/blog/img1.png" alt="">
-						</div>
-					</div>
-				</div><div class="col-sm col-lg-4 col-md-6">
-					<div class="single-blog">
-						<div class="img">
-							<img src="assets/images/blog/img1.png" alt="">
-						</div>
-					</div>
-				</div><div class="col-sm col-lg-4 col-md-6">
-					<div class="single-blog">
-						<div class="img">
-							<img src="assets/images/blog/img1.png" alt="">
-						</div>
-					</div>
-				</div><div class="col-sm col-lg-4 col-md-6">
-					<div class="single-blog">
-						<div class="img">
-							<img src="assets/images/blog/img1.png" alt="">
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 d-flex justify-content-center">
-					<nav aria-label="Page navigation example">
-						<ul class="pagination">
-							<li class="page-item">
-								<a class="page-link" href="#" aria-label="Previous">
-									<span aria-hidden="true"><i class="fas fa-angle-double-left"></i></span>
-								</a>
-							</li>
-							<li class="page-item"><a class="page-link" href="#">1</a></li>
-							<li class="page-item"><a class="page-link active" href="#">2</a></li>
-							<li class="page-item"><a class="page-link" href="#">3</a></li>
-							<li class="page-item">
-								<a class="page-link" href="#" aria-label="Next">
-									<span aria-hidden="true"><i class="fas fa-angle-double-right"></i></span>
-								</a>
-							</li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</div>
-	</section> -->
 
 
 
@@ -831,9 +710,7 @@
 							</a>
 						</div>
 						<div class="text">
-							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque, maxime. Esse eaque
-								possimus dolorum dignissimos!
-							</p>
+							<p>Your convenient access to Healthcare</p>
 						</div>
 					</div>
 					<div class="fotter-social-links">
