--- a/index.html
+++ b/index.html
@@ -660,8 +660,8 @@
           <div class="section-title">
             <h2 class="title">Partnership</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis assumenda illum iure! Iste, sequi
-              error.
+              CloudClinic partners with licensed medical labs, pharmacies, and reference hospitals to enable seamless
+              delivery of healthcare to her patients.
             </p>
           </div>
         </div>
@@ -1462,8 +1462,7 @@
             </div>
             <div class="right">
               <div class="content">
-                <p>+2349039156180</p>
-                <!-- <p>+2349039156180</p> -->
+                <p>+2347047869738</p><br>
               </div>
             </div>
           </div>
@@ -1477,8 +1476,7 @@
             </div>
             <div class="right">
               <div class="content">
-                <p>cloudclinic@gmail.com</p>
-                <!-- <p>cloudclinic@gmail.com</p> -->
+                <p>hello@cloudclinic.ng</p><br>
               </div>
             </div>
           </div>
@@ -1492,7 +1490,7 @@
             </div>
             <div class="right">
               <div class="content">
-                <p>140 Admiralty way, Lekki Lagos</p>
+                <p>Road 7a Dr Shaffideen Amuwo Street, Lekki Scheme 2, Ajah Lagos.</p>
               </div>
             </div>
           </div>
@@ -1524,7 +1522,7 @@
           <div class="google_map_wrapper">
 
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d507402.2871577664!2d3.4946979058827154!3d6.511511404944742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf75df5c74367%3A0x6a7e7df9d6c1cd4a!2sLekki!5e0!3m2!1sen!2sng!4v1665857434929!5m2!1sen!2sng"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.507183951947!2d3.5705642231274353!3d6.457237410801075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf7673d3ba323%3A0x4f28bacec29daf40!2sDr%20Shaffideen%20Amuwo%20St%2C%20Aja%20106104%2C%20Lekki!5e0!3m2!1sen!2sng!4v1668438803906!5m2!1sen!2sng"
               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
