--- a/becomepartner.html
+++ b/becomepartner.html
@@ -184,8 +184,7 @@
           <div class="section-title">
             <h2 class="title">Contact Us</h2>
             <p>
-              Prepared is me marianne pleasure likewise debating. Wonder an unable except better stairs do ye admire.
-              His secure called esteem praise.
+              Get in touch with us and our expert support team will answer all your questions.
             </p>
           </div>
         </div>
@@ -200,8 +199,7 @@
             </div>
             <div class="right">
               <div class="content">
-                <p>+2349039156180</p>
-                <!-- <p>+2349039156180</p> -->
+                <p>+2347047869738</p><br>
               </div>
             </div>
           </div>
@@ -215,8 +213,7 @@
             </div>
             <div class="right">
               <div class="content">
-                <p>cloudclinic@gmail.com</p>
-                <!-- <p>cloudclinic@gmail.com</p> -->
+                <p>hello@cloudclinic.ng</p><br>
               </div>
             </div>
           </div>
@@ -230,7 +227,7 @@
             </div>
             <div class="right">
               <div class="content">
-                <p>140 Admiralty way, Lekki Lagos</p>
+                <p>Road 7a Dr Shaffideen Amuwo Street, Lekki Scheme 2, Ajah Lagos.</p>
               </div>
             </div>
           </div>
@@ -262,7 +259,7 @@
           <div class="google_map_wrapper">
 
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d507402.2871577664!2d3.4946979058827154!3d6.511511404944742!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf75df5c74367%3A0x6a7e7df9d6c1cd4a!2sLekki!5e0!3m2!1sen!2sng!4v1665857434929!5m2!1sen!2sng"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.507183951947!2d3.5705642231274353!3d6.457237410801075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf7673d3ba323%3A0x4f28bacec29daf40!2sDr%20Shaffideen%20Amuwo%20St%2C%20Aja%20106104%2C%20Lekki!5e0!3m2!1sen!2sng!4v1668438803906!5m2!1sen!2sng"
               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
